# super-IA

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.py  dreaming.txt  knowledge_base.py  llm.py  main.py  parser.py  prompts.py  pyproject.toml  ruff.toml  setup.cfg  web_app.py
.github/workflows/: ci.yml
bench/: bench_models.py
docs/: index.md
scripts/: dev.sh
src/superpentesting/: __init__.py  __main__.py  cli.py  config.py  llm.py  main.py  prompts.py  safety.py
tests/: test_safety.py
