[metadata]
name = superpentesting
version = 0.1.0
description = LLM-based assistant scaffold for authorized pentesting workflows (planning, notes, reporting).
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests*
    docs*
    scripts*
    .github*

[options.package_data]
# If you later add prompt templates or other resources, list them here.
# superpentesting =
#     data/*.json
#     prompts/*.txt

[options.entry_points]
console_scripts =
    superpentesting = superpentesting.cli:main
